--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       />
       <nav>
         <ul class="nav_links">
-          <li id="navl"><a id="nava" href="#">Home</a></li>
+          <li id="navl"><a id="nava" href="index.html">Home</a></li>
           <li id="navl"><a id="nava" href="#">About</a></li>
           <li id="navl"><a id="nava" href="#">Blog</a></li>
         </ul>
       </nav>
-      <a href="" class="cta"><button id="butt">Contact</button></a>
+      <a href="contact.html" class="cta"><button id="butt">Contact</button></a>
     </header>
     <div class="content">
       <div class="box1">
@@ -32,7 +32,7 @@
         <p>
           Tired of finding the right resources and courses for you? <br> I've got you. <strong> OpenCup </strong>is my attempt to provide you free <br> resources  and courses that will help you learn anything <br> you want.
         </p>
-        <button class="btn" onClick= "myFunction()">explore</button>
+        <button class="btn" >explore</button>
       </div>
     </div>
 
@@ -109,7 +109,7 @@
           class="home-img"
         />
         <h2 class="headr">Free Certificates from Reaktor & University of Helsinki</h2>
-        <a href="#" class="home-title">The University of Helsinki offers several free online courses through their independent MOOC platform</a>
+        <a href="posts/posthr.html" class="home-title">The University of Helsinki offers several free online courses through their independent MOOC platform</a>
         <!-- <p class="desc">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
           excepturi. Magnam, maiores delectus.
@@ -272,11 +272,6 @@
         
         
       </footer>
-      <script>
-        function myFunction() {
-          const element = document.getElementsByClassName("home-container");
-          element.scrollIntoView();
-        }
-        </script>
+   
   </body>
 </html>
