--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p>
           Tired of finding the right resources and courses for you? <br> I've got you. <strong> OpenCup </strong>is my attempt to provide you free <br> resources  and courses that will help you learn anything <br> you want.
         </p>
-        <button class="btn" >explore</button>
+        <a href="#home-container"> <button class="btn" >explore</button> </a>
       </div>
     </div>
 
@@ -40,7 +40,7 @@
       <h2>Free Courses with certification</h2>
     </div>
     <!-- page2 -->
-    <section class="home-container">
+    <section id="home-container">
      <div class="homebox"><a href="posts/post-page.html">
       <div class="home-child">
         <img
