--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         /></a>
         <nav>
           <ul class="nav_links">
-            <li id="navl"><a id="nava" href="#">Home</a></li>
+            <li id="navl"><a id="nava" href="index.html">Home</a></li>
             <li id="navl"><a id="nava" href="#">About</a></li>
             <li id="navl"><a id="nava" href="#">Blog</a></li>
           </ul>
