--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>OpenCup</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     
     <!-- Custom styles for this template -->
   </head>
