--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
       <section class="contact-sec">
         <div class="details-box">
             <h1 class="chead">Contact Us</h1>
-            <form action="#">
+            <form action="https://send.pageclip.co/r8iUOKIZM5mtcnqaI3ygmLq3sY9FSUm1/Default" class="pageclip-form" method="post">
                 
                 
                   <div class="txt-field <label class="details">Name</label>
