--- a/contact.html
+++ b/contact.html
@@ -40,9 +40,7 @@
                 <div class="txt-field <label class="details">E-mail</label>
                 <input type="email"> </div>
                 <div class="txt-field <label  class="details">Message</label><input type="text"> </div>
-                <button type="submit" class="pageclip-form__submit">
-                  <span>Send</span>
-                </button>
+                <div class="fbtn"><input type="submit" value="Send"></div>
 
                 
             </form>
