--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
         /></a>
         <nav>
           <ul class="nav_links">
-            <li id="navl"><a id="nava" href="index.html">Home</a></li>
-            <li id="navl"><a id="nava" href="#">About</a></li>
+            <li id="navl1"><a id="nava" href="index.html">Home</a></li>
+            <li id="navl2"><a id="nava" href="#">About</a></li>
             <li id="navl"><a id="nava" href="#">Blog</a></li>
           </ul>
         </nav>
