added meta description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OpenCup</title>
+    <meta name="description" content="Improve your knowledge with OpenCup's free resources & courses. Get certified for free from top sources such as LinkedIn Learning, Kaggle, Google, freeCodeCamp, Reaktor & University of Helsinki, and Infosys. Enhance your coding skills with the best Github repositories for learning, boost your career now!">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -22,8 +23,8 @@
       <nav>
         <ul class="nav_links">
           <li id="navl1"><a id="nava" href="index.html">Home</a></li>
-          <li id="navl2"><a id="nava" href="#">About</a></li>
-          <li id="navl"><a id="nava" href="#">Blog</a></li>
+          <li id="navl2"><a id="nava" href="https://adarshdevdigest.me/about/">About</a></li>
+          <li id="navl"><a id="nava" href="https://adarshdevdigest.me/">Blog</a></li>
         </ul>
       </nav>
       <a href="contact.html" class="cta"><button id="butt">Contact</button></a>
